feat(IF-23): user and dish IT (#8)