@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,12 +15,12 @@ public class DishServiceImpl implements DishService {
     private final DishRepository dishRepository;
 
     @Override
-    public void save (Dish dish) {
-        dishRepository.save(DishModel.fromDomain(dish));
+    public Dish save(Dish dish) {
+        return Dish.fromData(dishRepository.save(DishModel.fromDomain(dish)));
     }
 
     @Override
-    public List<Dish> findAll ( ) {
-        return dishRepository.findAll().stream().map(Dish::fromData).collect(Collectors.toList());
+    public List<Dish> findAll() {
+        return dishRepository.findAll().stream().map(Dish::fromData).toList();
     }
 }
